# stack-builder

./: .gitignore  README.md  config_stackbuilder.cfg.template  pyproject.toml  sb.py  setup.cfg
sb/cli/: __init__.py  cli_builder.py
sb/utils/: config.py  easyconfigs.py  git.py  logging.py  timer.py  utils.py
sb/workflows/: build_stack.py  update_repo.py
