[metadata]
name = sib_stack_builder
version = attr: sett.__version__
license = GPL3v3
description = SIB Software Stack Builder
long_description = file: README.md
long_description_content_type = text/markdown
author = Robin Engler
author_email = robin.engler@sib.swiss
url = https://github.com/sib-swiss/sib-software-stack
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
project_urls =
    Documentation = https://github.com/sib-swiss/sib-software-stack/blob/main/README.md
    Source = https://github.com/sib-swiss/sib-software-stack

[options]
install_requires =
    GitPython
python_requires = >=3.7

[options.entry_points]
console_scripts =
    sett = sett.cli:run
gui_scripts =
    sett-gui = sett.gui.__main__:run

[options.packages.find]
exclude =
    test
    test.*
